--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MongoDB Flask App</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+    />
+  </head>
+  <body>
     <h1>MongoDB Flask App</h1>
     <div class="content">
-        <form method="post">
-            <p>
-                <label for="content">Todo Content</label>
-            </p>
-            <p>
-                <input type="text" name="content" placeholder="add todo...">
-            </p>
-            
-        </form>
+      <form method="post">
+        <p>
+          <label for="content">Todo Content</label>
+        </p>
+        <p>
+          <input type="text" name="content" placeholder="add todo..." />
+        </p>
+        <p>
+            <b><label for="degree">Degree</label></b>
+        </p>
+        <p>
+            <input 
+            id="degree-0"
+            name="degree"
+            required
+            type="radio"
+            value="important"
+            ><label for="degree">important</label>
+        </p>
+        <p>
+            <input 
+            id="degree-1"
+            name="degree"
+            required
+            type="radio"
+            value="unimportant"
+            ><label for="degree">Unimportant</label>
+        </p>
+        <button type="submit">Submit</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
